--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -32,20 +32,20 @@ Options can be defined before a primitive is constructed and passed to the primi
 
 <Tabs>
   <TabItem value="Estimator" label="Estimator">
-  - [Dynamical decoupling](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions): Options for dynamical decoupling.
-  - [Environment](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions): Execution environment options, such as the logging level to set and job tags to add.
-  - [Execution](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ExecutionOptionsV2): Primitive execution options, including whether to initialize qubits and the repetition delay.
-  - [Resilience](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2): Advanced options for configuring error mitigation methods such as measurement error mitigation, ZNE, and PEC.
-  - [Simulator](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions): Simulator options, such as the basis gates, simulator seed, and coupling map. Applies to [local testing mode](/guides/local-testing-mode) only.
-  - [Twirling](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions): Twirling options, such as whether to apply two-qubit gate twirling and the number of shots to run for each random sample.
+  - [Dynamical decoupling](/api/qiskit-ibm-runtime/options-dynamical-decoupling-options): Options for dynamical decoupling.
+  - [Environment](/api/qiskit-ibm-runtime/options-environment-options): Execution environment options, such as the logging level to set and job tags to add.
+  - [Execution](/api/qiskit-ibm-runtime/options-execution-options-v2): Primitive execution options, including whether to initialize qubits and the repetition delay.
+  - [Resilience](/api/qiskit-ibm-runtime/options-resiliance-options-v2): Advanced options for configuring error mitigation methods such as measurement error mitigation, ZNE, and PEC.
+  - [Simulator](/api/qiskit-ibm-runtime/options-simulator-options): Simulator options, such as the basis gates, simulator seed, and coupling map. Applies to [local testing mode](/guides/local-testing-mode) only.
+  - [Twirling](/api/qiskit-ibm-runtime/options-twirling-options): Twirling options, such as whether to apply two-qubit gate twirling and the number of shots to run for each random sample.
   </TabItem>
 
   <TabItem value="Sampler" label="Sampler">
-  - [Dynamical decoupling](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions): Options for dynamical decoupling.
-  - [Environment](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions): Execution environment options, such as the logging level to set and job tags to add.
-  - [Execution](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ExecutionOptionsV2): Primitive execution options, including whether to initialize qubits and the repetition delay.
-  - [Simulator](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions): Simulator options, such as the basis gates, simulator seed, and coupling map. Applies to [local testing mode](/guides/local-testing-mode) only.
-  - [Twirling](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions): Twirling options, such as whether to apply two-qubit gate twirling and the number of shots to run for each random sample.
+  - [Dynamical decoupling](/api/qiskit-ibm-runtime/options-dynamical-decoupling-options): Options for dynamical decoupling.
+  - [Environment](/api/qiskit-ibm-runtime/options-environment-options): Execution environment options, such as the logging level to set and job tags to add.
+  - [Execution](/api/qiskit-ibm-runtime/options-execution-options-v2): Primitive execution options, including whether to initialize qubits and the repetition delay.
+  - [Simulator](/api/qiskit-ibm-runtime/options-simulator-options): Simulator options, such as the basis gates, simulator seed, and coupling map. Applies to [local testing mode](/guides/local-testing-mode) only.
+  - [Twirling](/api/qiskit-ibm-runtime/options-twirling-options): Twirling options, such as whether to apply two-qubit gate twirling and the number of shots to run for each random sample.
   </TabItem>
 
 </Tabs>
@@ -63,15 +63,15 @@ Scroll to see the full table.
   <TabItem value="Estimator" label="Estimator">
 | Option               | Sub-option               | Sub-sub-option          | Choices                                                                                   | Default                   | Option               |
 |----------------------|--------------------------|-------------------------|-------------------------------------------------------------------------------------------|---------------------------|----------------------|
-| [default_shots](/api/qiskit-ibm-runtime/options-estimator-options)        |                          |         | Integer in the range[0, `backend.max_shots`]| None           | default_shots        |
-| [default_precision](/api/qiskit-ibm-runtime/options-estimator-options)    |                          |                     |  float > 0     | `0.015625 (1 / sqrt(4096))`     | default_precision    |
+| [default_shots](/api/qiskit-ibm-runtime/options-estimator-options#default_shots)        |                          |         | Integer in the range[0, `backend.max_shots`]| None           | default_shots        |
+| [default_precision](/api/qiskit-ibm-runtime/options-estimator-options#default_precision)    |                          |                     |  float > 0     | `0.015625 (1 / sqrt(4096))`     | default_precision    |
 | [dynamical_decoupling](/api/qiskit-ibm-runtime/options-dynamical-decoupling-options) |                          |                         |              |                     | dynamical_decoupling |
 |                      | enable                   |                         | `True`/`False`                                                             |    `False`           |                      |
 |                      | extra_slack_distribution |                         | `middle`/`edges`                                                                  | `middle`                  |                      |
 |                      | scheduling_method        |                         | `asap`/`alap`                                                                      | `alap`                    |                      |
 |                      | sequence_type            |                         | `XX`/`XpXm`/`XY4`                                                         | `XX`                      |                      |
 |                      | skip_reset_qubits       |                         | `True`/`False`                                                                                   | `False`                 |                    |
-| [environment](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions)          |                          |     |             |                                  | environment          |
+| [environment](/api/qiskit-ibm-runtime/qiskit_ibm_options-environment-options)          |                          |     |             |                                  | environment          |
 |                      | callback                 |                         |Callable function that receives Job ID and Job result.                             |`None`                           |                      |
 |                      | job_tags                 |                         |List of tags                                                                     |`None`                           |                      |
 |                      | log_level              |                         |`DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                 |`WARNING`                          |                      |
@@ -79,9 +79,9 @@ Scroll to see the full table.
 | [execution](/api/qiskit-ibm-runtime/options-execution-options-v2)            |                          |                         |               |                           | execution            |
 |                      | init_qubits              |                         | `True`/`False`                                                                         | `True`                    |                      |
 |                      | rep_delay                |                         | Value in the range supplied by `backend.rep_delay_range`.       | Given by `backend.default_rep_delay`.|                      |
-| [max_execution_time](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)   |                          |       | Integer number of seconds in the range  [1, 10800]    | `10800` (3 hours)   | max_execution_time   |
-| [resilience](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2)           |                          |      |                               |                      | resilience    |
-|                      | [layer_noise_learning](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2#layer_noise_learning)     |                         |                    |                            |      |
+| [max_execution_time](/api/qiskit-ibm-runtime/options-estimator-options#max_estimation_time)   |                          |       | Integer number of seconds in the range  [1, 10800]    | `10800` (3 hours)   | max_execution_time   |
+| [resilience](/api/qiskit-ibm-runtime/options-resilience-options-v2)           |                          |      |                               |                      | resilience    |
+|                      | [layer_noise_learning](/api/qiskit-ibm-runtime/options-resilience-options-v2#layer_noise_learning)     |                         |                    |                            |      |
 |                      |                          | layer_pair_depths       |  list[int] of 2-10 values in the range [0, 200]                           | `(0, 1, 2, 4, 16, 32)`              |                      |
 |                      |                          | max_layers_to_learn     |  `None`/ integer >= 1                                                                      | `4`                    |                      |
 |                      |                          | num_randomizations      |   integer >= 1                                                                            |  `32`                    |                      |
@@ -94,18 +94,18 @@ Scroll to see the full table.
 |                      | [pec](/api/qiskit-ibm-runtime/options-pec-options)   | max_overhead            |  `None`/ integer >1          | `100`                      |                      |
 |                      |                          | noise_gain              |  `auto`/ float in the range `[0, 1]`                                                     | `auto`                    |                      |
 |                      | zne_mitigation  | `True`/`False`                                                                         | `False`                     |                      |
-|                      | [zne](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions)   | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea                              `  | `gate_folding` |                      |
+|                      | [zne](/api/qiskit-ibm-runtime/options-zne-options)   | amplifier               | `gate_folding`, `gate_folding_front`, `gate_folding_back, pea                              `  | `gate_folding` |                      |
 |                      |                          | extrapolated_noise_factors |         list of floats  |  `[0, *noise_factors]`|                      |
 |                      |                          | extrapolator            | one or more of `exponential`<br />`linear`<br />`double_exponential`<br />`polynomial_degree_(1 <= k <= 7)`<br />`fallback` | (`exponential`, `linear`) |                      |
 |                      |                          | noise_factors           |   list of floats; each float >= 1     | `(1, 1.5, 2)` for PEA, and `(1, 3, 5)` otherwise. |                      |
-| [resilience_level](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)     |                          |                         | `0`/`1`/`2`    | `1`                         |     resilience_level   |
-| [seed_estimator](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions)       |                          |                         |  integer         |     `None`               |   seed_estimator   |
-| [simulator](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions)            |                          |                         |                |                     |   simulator   |
+| [resilience_level](/api/qiskit-ibm-runtime/options-estimator-options#resilience_level)     |                          |                         | `0`/`1`/`2`    | `1`                         |     resilience_level   |
+| [seed_estimator](/api/qiskit-ibm-runtime/options-estimator-options#seed_estimator)       |                          |                         |  integer         |     `None`               |   seed_estimator   |
+| [simulator](/api/qiskit-ibm-runtime/options-simulator-options)            |                          |                         |                |                     |   simulator   |
 |                      | basis_gates                                  |                         |  List of basis gate names to unroll to   | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |                      |
 |                      | coupling_map             |                         |  List of directed two-qubit interactions                                                | full connectivity     |                      |
 |                      | noise_model              |                         |   [Qiskit Aer NoiseModel](build-noise-models), or its representation        | `None`                      |                      |
 |                      | seed_simulator           |                         |   integer                                                                               | `None`                    |                      |
-| [twirling](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions)             |                          |                         |             |                       |     twirling     |
+| [twirling](/api/qiskit-ibm-runtime/options-twirling-options)             |                          |                         |             |                       |     twirling     |
 |                      | enable_gates             |                         | `True`/`False`                                                                           | `False`                     |                      |
 |                      | enable_measure           |                         | `True`/`False`                                                                       | `True`                      |                      |
 |                      | num_randomizations       |                         |  `auto`/ integer >= 1                                                                         | `auto`                    |                      |
@@ -118,29 +118,29 @@ Scroll to see the full table.
   <TabItem value="Sampler" label="Sampler">
 | Option                                                                                                  | Sub-option               | Choices                                                            | Default                                                                                                                                | Option               |
 |---------------------------------------------------------------------------------------------------------|--------------------------|--------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------|----------------------|
-| [default_shots](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions)                    |                          | Integer in the range[0, `backend.max_shots`]                       | `4096`                                                                                                                                 | default_shots        |
-| [dynamical_decoupling](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.DynamicalDecouplingOptions) |                          |                                                                    |                                                                                                                                        | dynamical_decoupling |
+| [default_shots](/api/qiskit-ibm-runtime/options-sampler-options#default_shots)                    |                          | Integer in the range[0, `backend.max_shots`]                       | `4096`                                                                                                                                 | default_shots        |
+| [dynamical_decoupling](/api/qiskit-ibm-runtime/options-dynamical-decoupling-options) |                          |                                                                    |                                                                                                                                        | dynamical_decoupling |
 |                                                                                                         | enable                   | `True`/`False`                                                     | `False`                                                                                                                                |                      |
 |                                                                                                         | sequence_type            | `XX`/`XpXm`/`XY4`                                                  | `XX`                                                                                                                                   |                      |
 |                                                                                                         | extra_slack_distribution | `middle`/`edges`                                                   | `middle`                                                                                                                               |                      |
 |                                                                                                         | scheduling_method        | `asap`/`alap`                                                      | `alap`                                                                                                                                 |                      |
 |                                                                                                         | skip_reset_qubits        | `True`/`False`                                                     | `False`                                                                                                                                |                      |
-| [environment](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EnvironmentOptions)                  |                          |                                                                    |                                                                                                                                        |                      |
+| [environment](/api/qiskit-ibm-runtime/options-environment-options)                  |                          |                                                                    |                                                                                                                                        |                      |
 |                                                                                                         | log_level                | `DEBUG`/`INFO`/`WARNING`/`ERROR`/`CRITICAL`                        | `WARNING`                                                                                                                              | environment          |
 |                                                                                                         | callback                 | Callable function that receives Job ID and Job result.             | `None`                                                                                                                                 |                      |
 |                                                                                                         | job_tags                 | List of tags                                                       | `None`                                                                                                                                 |                      |
 |                                                                                                         | private                  | `True`/`False`                                                     | `False`                                                                                                                                |                      |
-| [execution](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ExecutionOptionsV2)                    |                          |                                                                    |                                                                                                                                        |                      |
+| [execution](/api/qiskit-ibm-runtime/options-execution-options-v2)                    |                          |                                                                    |                                                                                                                                        |                      |
 |                                                                                                         | init_qubits              | `True`/`False`                                                     | `True`                                                                                                                                 | execution            |
 |                                                                                                         | meas_type                | `classified`/`kerneled`/`avg_kerneled`                             | `classified`                                                                                                                           |                      |
 |                                                                                                         | rep_delay                | Value in the range supplied by `backend.rep_delay_range`.          | Given by `backend.default_rep_delay`.                                                                                                  |                      |
-| [max_execution_time](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SamplerOptions)               |                          | Integer number of seconds in the range  [1, 10800]                 | `10800` (3 hours)                                                                                                                      |                      |
-| [simulator](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.SimulatorOptions)                      |                          |                                                                    |                                                                                                                                        | max_execution_time   |
+| [max_execution_time](/api/qiskit-ibm-runtime/options-sampler-options#max_execution_time)               |                          | Integer number of seconds in the range  [1, 10800]                 | `10800` (3 hours)                                                                                                                      |                      |
+| [simulator](/api/qiskit-ibm-runtime/options-simulator-options)                      |                          |                                                                    |                                                                                                                                        | max_execution_time   |
 |                                                                                                         | noise_model              | [Qiskit Aer NoiseModel](build-noise-models), or its representation | `None`                                                                                                                                 | simulator            |
 |                                                                                                         | seed_simulator           | integer                                                            | `None`                                                                                                                                 |                      |
 |                                                                                                         | coupling_map             | List of directed two-qubit interactions                            | full connectivity                                                                                                                      |                      |
 |                                                                                                         | basis_gates              | List of basis gate names to unroll to                              | The set of all basis gates supported by [Qiskit Aer simulator](https://qiskit.github.io/qiskit-aer/stubs/qiskit_aer.AerSimulator.html) |                      |
-| [twirling](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions)                        |                          |                                                                    |                                                                                                                                        |                      |
+| [twirling](/api/qiskit-ibm-runtime/options-twirling-options)                        |                          |                                                                    |                                                                                                                                        |                      |
 |                                                                                                         | enable_gates             | `True`/`False`                                                     | `False`                                                                                                                                | twirling             |
 |                                                                                                         | enable_measure           | `True`/`False`                                                     | `True`                                                                                                                                 |                      |
 |                                                                                                         | num_randomizations       | `auto`/ integer >= 1                                               | `auto`                                                                                                                                 |                      |
